--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Привет, Mini App!</h1>
 
-  <button onclick="sendData()">Отправить Telegram</button>
+  <button onclick="sendData()">Вассап всем братьям!</button>
 
   <script>
     const tg = window.Telegram.WebApp;
