--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <h5 class='AiBlockTextMinor'>Intelligence</h5>
         </div>
         <div class='AiBlockImage'>
-            <div class='AiBlockImageMain'><img src="../img/image 4.jpg" alt="" class='AiBlockStartImage' oncontextmenu="return false" /></div>
-            <div class='AiBlockImageMinor'><img src="../img/Gemini_Generated_Image_51uln151uln151ul 1.jpg" alt="" class='AiBlockBackImage' oncontextmenu='False'/></div>
+            <div class='AiBlockImageMain'><img src="https://Ivankomendantov1881.github.io/AppRels/img/image%204.jpg" alt="" class='AiBlockStartImage' oncontextmenu="return false" /></div>
+            <div class='AiBlockImageMinor'><img src="https://IvanKomendantov1881.github.io/AppRels/img/Gemini_Generated_Image_51uln151uln151ul%201.jpg" alt="" class='AiBlockBackImage' oncontextmenu='False'/></div>
         </div>
     </section>
     <section class="ButtonSectionBlock">
