+slides and fix text

--- a/index.html
+++ b/index.html
@@ -24,6 +24,22 @@
             <div class='AiBlockImageMinor'><img src="https://IvanKomendantov1881.github.io/AppRels/img/Gemini_Generated_Image_51uln151uln151ul%201.jpg" alt="" class='AiBlockBackImage' oncontextmenu='False'/></div>
         </div>
     </section>
+    <section class="SafetySectionBlock">
+      <div class='SafetyBlock'>
+        <div class="SafetyBlockText">
+            <h2 class="SafetyBlockTextMain">SAFETY</h2>
+            <h5 class="SafetyBlockTextMinor">The best protection against fraudsters</h5>
+        </div>
+        <div class="SafetyBlockImage">
+            <img src="../img/image 6_1.jpg" alt="" class="SafetyBlockImageLeft SafetyImage">
+            <img src="../img/image 6.jpg" alt="" class="SafetyBlockImageRight SafetyImage">
+        </div>
+      </div>
+    </section>
+    <section class="EaseSectionBlock">
+      <h2 class="EaseBlockTextMain">EASE</h2>
+      <h5 class="EaseBlockTextMinor">You can always consult with our AI to make communication easier.</h5>
+    </section>
     <section class="ButtonSectionBlock">
         <div class="ButtonNext">
             <h4 class="ButtonText">NEXT</h4>
