edit image safety block

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             <h5 class="SafetyBlockTextMinor">The best protection against fraudsters</h5>
         </div>
         <div class="SafetyBlockImage">
-            <img src="../img/image 6_1.jpg" alt="" class="SafetyBlockImageLeft SafetyImage">
-            <img src="../img/image 6.jpg" alt="" class="SafetyBlockImageRight SafetyImage">
+            <img src="https://ivankomendantov1881.github.io/AppRels/img/image%206_1.jpg" alt="" class="SafetyBlockImageLeft SafetyImage">
+            <img src="https://ivankomendantov1881.github.io/AppRels/img/image%206.jpg" alt="" class="SafetyBlockImageRight SafetyImage">
         </div>
       </div>
     </section>
